Closed Bug 886803 Opened 12 years ago Closed 12 years ago

Page (JIRA dashboard) not being rendered correctly

Categories

(Core :: JavaScript Engine, defect)

24 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla25
Tracking Status
firefox23 --- unaffected
firefox24 + verified
firefox25 + verified

People

(Reporter: paul.0000.black, Assigned: bhackett1024)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

I've tried this on Linux 64-bit nightly only. Go to https://jira.atlassian.com/secure/Dashboard.jspa Some of the elements that should be on the page are not being shown. This problem was not present in nightly of 21 June but is present in nightlies of 22 June onwards. I've attached the 25 June nightly display (bad.png) and the 21 June nightly display (good.png).
Attached image Bad display
Attached image Good display
Assignee: nobody → general
Blocks: 885522
Status: UNCONFIRMED → NEW
Component: General → JavaScript Engine
Ever confirmed: true
OS: Linux → All
Product: Firefox → Core
Hardware: x86_64 → All
Version: 25 Branch → 24 Branch
Summary: Page not being rendered correctly → Page (JIRA dashboard) not being rendered correctly
Attached patch patchSplinter Review
new Function() would only populate the bindings on the resulting function script, not the bindings internal to the created function box (lame) which broke heavyweight tests when emitting bytecode for the function. This patch changes things so that both bindings are populated. The Bindings interface is rather complicated/awkward so this just does the same population twice.
Assignee: general → bhackett1024
Attachment #771771 - Flags: review?(jdemooij)
Attachment #771771 - Flags: review?(jdemooij) → review+
Comment on attachment 771771 [details] [diff] [review] patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 885522 User impact if declined: broken webpages Testing completed (on m-c, etc.): on m-i Risk to taking this patch (and alternatives if risky): none
Attachment #771771 - Flags: approval-mozilla-aurora?
Attachment #771771 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
(In reply to Paul Black from comment #0) > I've tried this on Linux 64-bit nightly only. > > Go to https://jira.atlassian.com/secure/Dashboard.jspa > > Some of the elements that should be on the page are not being shown. > > This problem was not present in nightly of 21 June but is present in > nightlies of 22 June onwards. > > I've attached the 25 June nightly display (bad.png) and the 21 June nightly > display (good.png). Paul, this issue should be resolved now..Can you help us test the latest nightly or aurora and confirm the issue is fixed once the patch lands ? Thanks !
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Today's nightlies came off revision c0830a5933e8, which was prior to this landing. You can try a current tinderbox build or wait for tomorrow's nightly to confirm the fix.
Mozilla/5.0 (Windows NT 6.1; rv:24.0) Gecko/20130710 Firefox/24.0 Mozilla/5.0 (X11; Linux i686; rv:24.0) Gecko/20130710 Firefox/24.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:24.0) Gecko/20130710 Firefox/24.0 Verified as fixed on Firefox Aurora 24.0a2 buildid 20130710004004
Works for me on the nightly of 10 July. Cheers.
Mozilla/5.0 (Windows NT 6.1; rv:25.0) Gecko/20130710 Firefox/25.0 Mozilla/5.0 (X11; Linux i686; rv:25.0) Gecko/20130710 Firefox/25.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20130710 Firefox/25.0 Verified as fixed in Firefox Nightly 25.0a1 buildid 20130710030205
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: