Bug 886803 - Populate both script and function box bindings for new Function() functions, so heavyweight tests work. r=jandem, a=bajaj